--- a/catalog/templates/catalog/index.html
+++ b/catalog/templates/catalog/index.html
@@ -1,11 +1,11 @@
 {% extends 'base_generic.html' %}
 
 {% block title %}
-<title>Halo</title>
+<title>Katalog Buku</title>
 {% endblock title %}
 
 {% block content %}
-    <h1>Local Library Home</h1>
+    {% comment %} <h1>Local Library Home</h1>
     <p>Welcome to LocalLibrary, a website developed by <em> Iqbal </em> </p>
     <h2>Dynamic content</h2>
     <p>The library has the following record counts:</p>
@@ -18,5 +18,11 @@
     </ul>
     <p>
         Kunjungan ke {{ num_visits }}
-    </p>
+    </p> {% endcomment %}
+<div class="container min-h-screen mx-auto flex justify-center items-center">
+    <div class="indicator">
+        <span class="indicator-item badge badge-secondary">99+</span> 
+        <button class="btn">inbox</button>
+    </div>
+</div>
 {% endblock content %}
