--- a/frontend/templates/base_generic.html
+++ b/frontend/templates/base_generic.html
@@ -1,4 +1,5 @@
 {% load static tailwind_tags %}
+{% load get_count %}
 
 <!DOCTYPE html>
 <html lang="en">
@@ -15,59 +16,8 @@
     {% tailwind_css %}
 </head>
 <body>
-    <div class="container-fluid">
-        <div class="row">
-            <div class="col-sm-2">
-            {% block sidebar %}
-            <ul class="sidebar-nav">
-                <li><a href="{% url 'catalog' %}">Home</a></li>
-                <li><a href="{% url 'books' %}">All books</a></li>
-                <li><a href="{% url 'authors' %}">All authors</a></li>
-              </ul>
-            <ul class="sidebar-nav">
-                {% if user.is_authenticated %}
-                <li>User: {{ user.get_username }}</li>
-             
-                <li><a href="{% url 'my-borrowed' %}">My Borrowed</a></li>
-             
-                <li><a href="{% url 'logout' %}?next={{ request.path }}">Logout</a></li>
-                {% else %}
-                <li><a href="{% url 'login' %}?next={{ request.path }}">Login</a></li>
-                {% endif %}
-              </ul>
-            {% if user.is_staff %}
-                <hr>
-                <ul class="sidebar-nav">
-                    <li>Staff</li>
-                    {% if perms.catalog.can_mark_returned %}
-                    <li><a href="{% url 'all-borrowed' %}">All borrowed</a></li>
-                    {% endif %}
-                </ul>
-
-            {% endif %}
-           
-            {% endblock sidebar %}
-            </div>
-            <div class="col-sm-10">
-            {% block content %}{% endblock content %}
-            {% block pagination %}
-                {% if is_paginated %}
-                <div class="panination">
-                    <span class="page-links">
-                    {% if page_obj.has_previous %}
-                    <a href="{{ request.path }}?page={{ page.obj.previous_page_number }}">Previous</a>
-                    {% endif %}
-                    <span class="page-current">
-                    Page {{ page_obj.number }} of {{ page_obj.paginator.num_pages }}.</span>
-                    {% if page_obj.has_next %}
-                        <a href="{{ request.path }}?page={{ page_obj.next_page_number }}">Next</a>
-                    {% endif %}
-                    </span>
-                </div>
-                {% endif %}
-            {% endblock pagination %}
-            </div>
-        </div>
+    <div class="w-full">
+        {% block content %}{% endblock content %}
     </div>
 </body>
 </html>
